Add info block to each file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# unnamed-emoji
+# https://github.com/gucci-on-fleek/unnamed-emoji
+# SPDX-License-Identifier: MPL-2.0+
+# SPDX-FileCopyrightText: 2023 Max Chernoff
 *.aux
 *.log
 *.pdf
