Document OpTeX support

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,6 +30,7 @@ jobs:
             libertinus-fonts
             ltxcmds
             luatex85
+            optex
             pdftexcmds
             plex
             standalone
